Hero Section Added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,17 @@
         </nav>
     </header>
     <main>
-
+        <div class="hero display-flex">
+            <div class="child-image">
+                <img src="assets/hero-kids.png" alt="">
+            </div>
+            <div class="hero-information">
+                <h1 class="hero-title"><span class="orange">Empowering</span>
+                    students from small age <span class="blue">towards vision</span></h1>
+                <p class="hero-description">With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
+                <button class="enroll">Enroll Now</button>
+            </div>
+        </div>
     </main>
     <footer>
 
