Curriculum Section added.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,35 @@
                 <button class="enroll">Enroll Now</button>
             </div>
         </div>
+        <div class="curriculum">
+            <h1 class="curriculum-title">Standard Curriculum</h1>
+            <div class="divisions display-flex">
+                <div class="division-1">
+                    <img src="assets/kinder.png" alt="">
+                    <h3 class="division-name">Kinder (3-6) Years</h3>
+                    <p class="division-description">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <h4 class="division-details1">Read More</h4>
+                </div>
+                <div class="division-2">
+                    <img src="assets/elementary.png" alt="">
+                    <h3 class="division-name">Elementary School</h3>
+                    <p class="division-description">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <h4 class="division-details2">Read More</h4>
+                </div>
+                <div class="division-3">
+                    <img src="assets/middle.png" alt="">
+                    <h3 class="division-name">Middle (10-16) Years</h3>
+                    <p class="division-description">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <h4 class="division-details3">Read More</h4>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
 
