scrolling section added

--- a/index.html
+++ b/index.html
@@ -44,27 +44,25 @@
                 <div class="division-1">
                     <img src="assets/kinder.png" alt="">
                     <h3 class="division-name">Kinder (3-6) Years</h3>
-                    <p class="division-description">Cum sociis natoque penatibus et magnis
-                        dis parturient montes, nascetur ridiculus
-                        mu sdis parturient</p>
+                    <p class="division-description">The curriculum focuses on developing basic literacy and numeracy skills, social interactions, and emotional growth.</p>
                     <h4 class="division-details1">Read More</h4>
                 </div>
                 <div class="division-2">
                     <img src="assets/elementary.png" alt="">
                     <h3 class="division-name">Elementary School</h3>
-                    <p class="division-description">Cum sociis natoque penatibus et magnis
-                        dis parturient montes, nascetur ridiculus
-                        mu sdis parturient</p>
+                    <p class="division-description">Elementary school builds a strong foundation in core subjects like reading, writing, math, science, and social studies.</p>
                     <h4 class="division-details2">Read More</h4>
                 </div>
                 <div class="division-3">
                     <img src="assets/middle.png" alt="">
                     <h3 class="division-name">Middle (10-16) Years</h3>
-                    <p class="division-description">Cum sociis natoque penatibus et magnis
-                        dis parturient montes, nascetur ridiculus
-                        mu sdis parturient</p>
+                    <p class="division-description">Middle school curriculum bridges the gap between elementary and high school, offering more in-depth study in subjects like math, science, language arts, and social studies.</p>
                     <h4 class="division-details3">Read More</h4>
                 </div>
+            </div>
+            <div class="scrolling display-flex">
+                <div class="arrow"> <span><</span> </div>
+                <div class="arrow">  <span>></span></div>
             </div>
         </div>
     </main>
