Marquee,stoires and more responsive done

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         </div>
         <div class="curriculum">
             <h1 class="curriculum-title">Standard Curriculum</h1>
+            <marquee class="marquee" direction="right">
+                Admission Ongoing
+            </marquee>
             <div class="divisions display-flex">
                 <div class="division-1">
                     <img src="assets/kinder.png" alt="">
@@ -65,6 +68,60 @@
                 <div class="arrow">  <span>></span></div>
             </div>
         </div>
+        <section class="stories-section">
+            <h1 class="story-title">Our Stories</h1>
+            <div class="stories display-flex">
+                <div class="story-1">
+                    <div class="story-image"></div>
+                    <div class="story-description">
+                        <button class="date raleway-font">November 19, 2019</button>
+                        <h5 class="story-heading">A fun toddler coloring training on
+                            classroom</h5>
+                        <p class="story-paragraph">Beautiful branding for changes by Never Now in Australia.
+                            changes is a platform for open discussion in an inclusive and
+                            collaborative environment, providing the...</p>
+                    </div>
+                </div>
+                <div class="story-2 display-grid">
+                    <div class="story-2-1">
+                        <div class="story-2-1-image"></div>
+                        <div class="story-2-description">
+                            <button class="date-2-1 raleway-font">November 19, 2019</button>
+                            <h5 class="story-2-heading">Find out if a school fits the
+                                family’s needs</h5>
+                        </div>
+                    </div>
+                    <div class="story-2-2">
+                        <div class="story-2-2-image"></div>
+                        <div class="story-2-description">
+                            <button class="date-2-2 raleway-font">November 19, 2019</button>
+                            <h5 class="story-2-heading">Summer math & literacy
+                                centres for kids</h5>
+                        </div>
+                    </div>
+                    <div class="story-2-3">
+                        <div class="story-2-3-image"></div>
+                        <div class="story-2-description">
+                            <button class="date-2-3 raleway-font">November 19, 2019</button>
+                            <h5 class="story-2-heading">Classroom management
+                                techniques for new tutors</h5>
+                        </div>
+                    </div>
+                    <div class="story-2-4">
+                        <div class="story-2-4-image"></div>
+                        <div class="story-2-description">
+                            <button class="date-2-4 raleway-font">November 19, 2019</button>
+                            <h5 class="story-2-heading">Conversation rhymes
+                                improve kids listening</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="story-3">
+    
+                </div>
+            </div>
+            <button class="enroll">View All</button>
+        </section>
     </main>
     <footer>
 
