Footer added and more responsive

--- a/index.html
+++ b/index.html
@@ -124,7 +124,31 @@
         </section>
     </main>
     <footer>
-
+        <div class="footer display-flex">
+            <div class="about-footer">
+                <div class="footer-logo display-flex">
+                    <img src="assets/Group 1@2x.png" alt="">
+                    <h1 class="logo-header">Kids Education</h1>
+                </div>
+                <p class="footer-description">Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+            </div>
+            <div class="about-school">
+                <h1 class="about-header">About School</h1>
+                <h2 class="about-header-2">Home</h2>
+                <h2 class="about-header-2">About</h2>
+                <h2 class="about-header-2">Facilities</h2>
+                <h2 class="about-header-2">Admission</h2>
+            </div>
+            <div class="connections">
+                <h1 class="link-header">Keep In Touch</h1>
+                <div class="links">
+                    <img src="assets/fb.png" alt="">
+                    <img src="assets/dribble.png" alt="">
+                    <img src="assets/twitter.png" alt="">
+                    <img src="assets/google+.png" alt="">
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
